UtahLiveDataTest/src/objects/CommunityRegistrationConfigDetail__c.object
<CustomObject>
    <description>[Framework] Defines the details of the configuration for the Community registration</description>
    <fields>
        <fullName>CommunityRegistrationConfig__c</fullName>
        <label>Community Registration Config</label>
        <referenceTo>CommunityRegistrationConfig__c</referenceTo>
        <relationshipLabel>Community Registration Config Details</relationshipLabel>
        <relationshipName>Community_Registration_Config_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message on invalid input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabelOverride__c</fullName>
        <label>Field Label Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpTextPost__c</fullName>
        <label>Help Text Post</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputFieldAPIName__c</fullName>
        <label>Input Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputFieldType__c</fullName>
        <label>Input Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InputField__c</fullName>
        <label>Input Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unique ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Visible ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Community Registration Config Detail</label>
    <nameField>
        <label>Community Registration Config Detail Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Registration Config Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>